Fix HTML map element not matching image using id attribute

https://bugs.webkit.org/show_bug.cgi?id=91228
rdar://12359382

Reviewed by NOBODY (OOPS!).

This patch aligns WebKit with Web-Spec [1] and Blink / Chromium.

Merge: https://chromium.googlesource.com/chromium/src/+/a8a7c7e5140e87df205db4eca23a99489f643337

The specs specify that, regardless of HTML versus XML syntax, matching
the map element with an img using `usemap` attribute should be done
using either the `name` or the `id` attributes, rather than using the id
attribute only for the XML syntax [1].

This also fixes the code that considers both id and name (which was
previously done only for XML syntax) to consider both of them when both
are present, rather than only the one specified later.

[1] https://html.spec.whatwg.org/multipage/image-maps.html#image-map-processing-model

* Source/WebCore/html/HTMLMapElement.cpp:
(HTMLMapElement::attributeChanged): Remove FIXME to limit only to HTML Documents and other bits
* Source/WebCore/dom/TreeScopeOrderedMap.cpp:
(TreeScopeOrderedMap::getElementByMapName): Add 'id' bits
* Source/WebCore/dom/TreeScope.cpp:
(TreeScope::addImageMap): 'id' bit
(TreeScope::removeImageMap): Ditto
(TreeScope::getImageMap): Ditto
* LayoutTests/imported/w3c/web-platform-tests/html/semantics/embedded-content/image-maps/image-map-processing-model/hash-name-reference-expected.txt: Rebaselined